# conway-polyhedra-godot

./: .gitignore  LICENSE
godot/: Main.tscn  project.godot  rust.gdextension  rust.gdextension.uid
rust/: Cargo.toml  build-wasm.sh
rust/src/: conway_polyhedron.rs  lib.rs
